<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:src="@color/teal_200"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judul"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="60dp"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="@color/black" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/profile"/>
    </FrameLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TableLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow>
            <TextView
                android:padding="10dp"
                android:background="@color/abcd"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/baris1kolom1"/>
            <TextView
                android:padding="10dp"
                android:background="@color/abcd"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/baris1kolom2"/>
        </TableRow>
        <TableRow>
            <TextView
                android:padding="10dp"
                android:background="@color/abcd"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/baris2kolom1"/>
            <TextView
                android:padding="10dp"
                android:background="@color/abcd"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/baris2kolom2"/>
        </TableRow>
        <TableRow>
            <TextView
                android:padding="10dp"
                android:background="@color/abcd"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/baris3kolom1"/>
            <TextView
                android:padding="10dp"
                android:background="@color/abcd"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/baris3kolom2"/>
        </TableRow>
        <TableRow>
            <TextView
                android:padding="10dp"
                android:background="@color/abcd"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/baris4kolom1"/>
            <TextView
                android:padding="10dp"
                android:background="@color/abcd"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/baris4kolom2"/>
        </TableRow>
    </TableLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/android"/>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>